--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "dc4e74f6-7eb3-495c-9715-1b3901ea274a"
 authors = ["Kiran Shila <me@kiranshila.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
+Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
+
 [compat]
 julia = "1.7"
 
