--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
+DimensionalData = "0.20"
 julia = "1.7"
 
 [extras]
