--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,3 @@
-[deps]
-DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-RadioTransients = "dc4e74f6-7eb3-495c-9715-1b3901ea274a"
+version https://git-lfs.github.com/spec/v1
+oid sha256:982d99f5b70cfa843383c17456f659321e2f2a10b9ff5fcb145297c003eb1efb
+size 274
