--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 DimensionalData = "0.20"
+Distributions = "0.25"
 julia = "1.7"
 
 [extras]
