--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "RadioTransients"
+name = "SIGPROC"
 uuid = "dc4e74f6-7eb3-495c-9715-1b3901ea274a"
 authors = ["Kiran Shila <me@kiranshila.com> and contributors"]
 version = "0.1.0"
