--- a/Project.toml
+++ b/Project.toml
@@ -16,3 +16,9 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
+
+[compat]
+IntervalSets = "0.6"
+DimensionalData = "0.20"
+RecipesBase = "1"
+julia = "1.0"
